tests/errors/err02_funcion_no_declarada.ml
// Error 02: [SEMÁNTICO] Función no declarada
a = 5;
b = cuadrado(a);
print(b);
